[gd_scene load_steps=6 format=3 uid="uid://combat_scene_001"]

[ext_resource type="Script" path="res://scripts/combat/Combat.gd" id="1"]
[ext_resource type="Script" path="res://scripts/combat/ShipDisplay.gd" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp_green"]
bg_color = Color(0.290196, 0.886275, 0.290196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp_yellow"]
bg_color = Color(0.886275, 0.831373, 0.290196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp_red"]
bg_color = Color(0.886275, 0.290196, 0.290196, 1)

[node name="Combat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.0392157, 0.101961, 1)

[node name="PlayerShipDisplay" type="Node2D" parent="."]
position = Vector2(200, 360)
script = ExtResource("2")

[node name="EnemyShipDisplay" type="Node2D" parent="."]
position = Vector2(1080, 360)
script = ExtResource("2")

[node name="PlayerHealthBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 250.0
offset_right = 350.0
offset_bottom = 290.0
theme_override_styles/fill = SubResource("StyleBoxFlat_hp_green")
max_value = 100.0
value = 100.0
show_percentage = false

[node name="PlayerHealthLabel" type="Label" parent="PlayerHealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "100 / 100 HP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyHealthBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 930.0
offset_top = 250.0
offset_right = 1230.0
offset_bottom = 290.0
theme_override_styles/fill = SubResource("StyleBoxFlat_hp_green")
max_value = 100.0
value = 100.0
show_percentage = false

[node name="EnemyHealthLabel" type="Label" parent="EnemyHealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "40 / 40 HP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnIndicator" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "PLAYER TURN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnGlow" type="ColorRect" parent="TurnIndicator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.29, 0.89, 0.89, 0.3)
z_index = -1

[node name="RedesignButton" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 680.0
offset_right = 170.0
offset_bottom = 730.0
theme_override_font_sizes/font_size = 18
text = "REDESIGN"

[node name="FFButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1100.0
offset_top = 20.0
offset_right = 1210.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 18
text = "FF: 1x"

[node name="ResultOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="ResultLabel" type="Label" parent="ResultOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -50.0
offset_right = 300.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
text = "VICTORY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VictoryOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="VictoryTitle" type="Label" parent="VictoryOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -120.0
offset_right = 400.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.290196, 0.886275, 0.290196, 1)
theme_override_font_sizes/font_size = 64
text = "ALL MISSIONS COMPLETE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VictorySubtitle" type="Label" parent="VictoryOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -20.0
offset_right = 400.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "You've proven your designs can win the war!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReturnButton" type="Button" parent="VictoryOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 60.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "RETURN TO MENU"
